# moodle_cetec_mcp

./: .gitignore  README.md  client.py  client_good.py  client_memory.py  main.py  mcp_config.json  pyproject.toml  server.py
